tests/vertical-slice/accept/std_io_import_run.hew
import std::io;

fn main() {
    io.write("stdlib-io:write\n");
}
