tests/vertical-slice/reject/rc_set_replacement_use_after_move.hew
fn main() {
    let rc = Rc::new("o" + "ld");
    let replacement = "n" + "ew";
    rc.set(replacement);
    print(replacement);
}
